// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remove cluster confirmation modal renders buttons with modal included 1`] = `
<div
  class="gl-flex"
>
  <button
    class="btn btn-danger btn-md gl-button gl-mr-3"
    data-testid="remove-integration-and-resources-button"
    type="button"
  >
    <span
      class="gl-button-text"
    >
      Remove integration and resources
    </span>
  </button>
  <button
    class="btn btn-danger btn-danger-secondary btn-md gl-button"
    data-testid="remove-integration-button"
    type="button"
  >
    <span
      class="gl-button-text"
    >
      Remove integration
    </span>
  </button>
</div>
`;

exports[`Remove cluster confirmation modal two buttons open modal with "cleanup" option 1`] = `
<div
  class="gl-flex"
>
  <button
    class="btn btn-danger btn-md gl-button gl-mr-3"
    data-testid="remove-integration-and-resources-button"
    type="button"
  >
    <span
      class="gl-button-text"
    >
      Remove integration and resources
    </span>
  </button>
  <button
    class="btn btn-danger btn-danger-secondary btn-md gl-button"
    data-testid="remove-integration-button"
    type="button"
  >
    <span
      class="gl-button-text"
    >
      Remove integration
    </span>
  </button>
  <div
    kind="danger"
  >
    <p>
      You are about to remove your cluster integration and all GitLab-created resources associated with this cluster.
    </p>
    <div>
      This will permanently delete the following resources:
      <ul>
        <li>
          Any project namespaces
        </li>
        <li>
          <code>
            clusterroles
          </code>
        </li>
        <li>
          <code>
            clusterrolebindings
          </code>
        </li>
      </ul>
    </div>
    <strong>
      To remove your integration and resources, type
      <code>
        my-test-cluster
      </code>
      to confirm:
    </strong>
    <form
      action="clusterPath"
      class="gl-mb-5"
      method="post"
    >
      <input
        name="_method"
        type="hidden"
        value="delete"
      />
      <input
        name="authenticity_token"
        type="hidden"
      />
      <input
        name="cleanup"
        type="hidden"
        value="true"
      />
      <input
        autocomplete="off"
        class="form-control gl-form-input"
        id="reference-0"
        name="confirm_cluster_name_input"
        type="text"
      />
    </form>
    <span>
      If you do not wish to delete all associated GitLab resources, you can simply remove the integration.
    </span>
  </div>
</div>
`;

exports[`Remove cluster confirmation modal two buttons open modal without "cleanup" option 1`] = `
<div
  class="gl-flex"
>
  <button
    class="btn btn-danger btn-md gl-button gl-mr-3"
    data-testid="remove-integration-and-resources-button"
    type="button"
  >
    <span
      class="gl-button-text"
    >
      Remove integration and resources
    </span>
  </button>
  <button
    class="btn btn-danger btn-danger-secondary btn-md gl-button"
    data-testid="remove-integration-button"
    type="button"
  >
    <span
      class="gl-button-text"
    >
      Remove integration
    </span>
  </button>
  <div
    kind="danger"
  >
    <p>
      You are about to remove your cluster integration.
    </p>
    <strong>
      To remove your integration, type
      <code>
        my-test-cluster
      </code>
      to confirm:
    </strong>
    <form
      action="clusterPath"
      class="gl-mb-5"
      method="post"
    >
      <input
        name="_method"
        type="hidden"
        value="delete"
      />
      <input
        name="authenticity_token"
        type="hidden"
      />
      <input
        name="cleanup"
        type="hidden"
        value="true"
      />
      <input
        autocomplete="off"
        class="form-control gl-form-input"
        id="reference-0"
        name="confirm_cluster_name_input"
        type="text"
      />
    </form>
  </div>
</div>
`;
